--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,11 @@ glib = "0.9.1"
 gdk = "0.12.0"
 regex = "1"
 tables = { path = "../tables" }
-postgres = "0.15.1"
+postgres = { version="0.17.1", features = [ "with-chrono-0_4" ] }
 # csv = "1.1.1"
 sourceview = "0.8.0"
 nlearn = { path="../nlearn" }
+libloading = "0.5"
 
 [[bin]]
 name="queries"
