--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ postgres = { version="0.17.1", features = [ "with-chrono-0_4" ] }
 sourceview = "0.8.0"
 nlearn = { path="../nlearn" }
 libloading = "0.5"
+rusqlite = "0.21.0"
 
 [[bin]]
 name="queries"
