--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ sourceview = "0.8.0"
 nlearn = { path="../nlearn" }
 libloading = "0.5"
 rusqlite = "0.21.0"
+syn = { version = "1.0.17", features = ["full"] }
+quote = "1.0.3"
 
 [[bin]]
 name="queries"
