Fused with plots

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ libloading = "0.5"
 rusqlite = "0.21.0"
 syn = { version = "1.0.17", features = ["full"] }
 quote = "1.0.3"
+gtkplotview = { path = "../gtkplotview" }
+gtk-plots = { path = "../gtk-plots" }
 
 [[bin]]
 name="queries"
