--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,17 @@ gio = "0.8.0"
 glib = "0.9.1"
 gdk = "0.12.0"
 regex = "1"
-tables = { path = "../tables" }
+# tables = { path = "../tables" }
 postgres = { version="0.17.1", features = [ "with-chrono-0_4" ] }
 # csv = "1.1.1"
 sourceview = "0.8.0"
-nlearn = { path="../nlearn" }
+# nlearn = { path="../nlearn" }
 libloading = "0.5"
-rusqlite = "0.21.0"
+rusqlite = { version="0.21.0", features=["load_extension", "csvtab", "functions", "serde_json", "backup" ] }
 syn = { version = "1.0.17", features = ["full"] }
 quote = "1.0.3"
 gtkplotview = { path = "../gtkplotview" }
-gtk-plots = { path = "../gtk-plots" }
+# gtk-plots = { path = "../gtk-plots" }
 toml = "0.5.6"
 chrono = "0.4.11"
 rust_decimal = { version = "1.3.0", features = ["postgres"] }
