Removed sidebar in favor of popovers to edit plot. Added main menu. Added local function management window

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,10 @@ nalgebra = "0.21.0"
 num-traits="0.2.11"
 bayes = { git = "https://github.com/limads/bayes.git" }
 # byteorder="1.3.4"
-
+queries = { path = "../queries-ext" }
 libxml = "0.2.13"
 pango = "0.8.0"
+proc-macro2 = "1.0.18"
 
 [[bin]]
 name="queries"
