--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ gtk = { version = "0.8.0", features = ["v3_16"] }
 gio = "0.8.0"
 glib = "0.9.1"
 gdk = "0.12.0"
-sourceview = "0.8.0"
+sourceview = { version = "0.8.0", features = ["v3_16"] }
 cairo-rs = { version = "0.8.0", features = ["svg", "png"] }
 regex = "1"
 postgres = { version="0.17.4", features = [ "with-chrono-0_4" ] }
