--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,11 @@ name="queries"
 path="src/main.rs"
 
 [dependencies]
-gtk = { version = "0.9.1", features = ["v3_16"] }
 gio = "0.9.0"
 glib = "0.10.0"
 gdk = "0.13.0"
+gdk-pixbuf = "0.9.0"
+gtk = { version = "0.9.1", features = ["v3_16"] }
 sourceview = { version = "0.9.0", features = ["v3_16"] }
 cairo-rs = { version = "0.9.0", features = ["svg", "png"] }
 regex = "1"
