--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ gdk-pixbuf = "0.9.0"
 gtk = { version = "0.9.2", features = ["v3_24_9"] }
 sourceview = { version = "0.9.0", features = ["v3_16"] }
 cairo-rs = { version = "0.9.1", features = ["svg", "png", "ps"] }
-regex = "1"
+regex = { version = "1.4.2" }
 postgres = { version="0.18.1", features = [ "with-chrono-0_4" ] }
 libloading = "0.5"
 rusqlite = { version="0.23.1", features=["load_extension", "csvtab", "vtab", "functions", "serde_json", "backup" ] }
@@ -36,12 +36,13 @@ bayes = { path = "../bayes" }
 morlet = { path = "../morlet", features = ["gsl"] }
 datafusion = { version = "1.0.0", optional = true }
 arrow = { version = "1.0.0", optional = true }
-libxml = "0.2.13"
+libxml = "0.2.15"
 pango = "0.9.1"
 proc-macro2 = "1.0.18"
 either = "1.6.1"
 anyhow = "1.0.32"
 pulldown-cmark = "0.8.0"
+xml-rs = "0.8.3"
 
 [features]
 arrowext = []
